Some of the changes suggested by @msalibian in #3 for Chapter 8

--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -19,7 +19,8 @@ By the end of the chapter, students will be able to:
 * Describe advantages and disadvantages of the k-nearest neighbour regression approach.
 
 ## Regression 
-We can use regression as a method to answer a very similar question to classification (can we use past information to predict future observations?), but in the case of regression the goal is to predict numerical values instead of class labels. An example regression prediction question would be: can we use hours spent on exercise each week to predict marathon race time? And another example regression prediction question is: can we use house size (livable square feet) to predict house sale price? We will use this question to explore regression in this text book. For this we will use a real estate data set from Sacremento, California that is part of the `caret` package.
+We can use regression as a method to answer a very similar question to classification (can we use past information to predict future observations?), but in the case of regression the goal is to predict numerical values instead of class labels. An example regression prediction question would be: can we use hours spent on exercise each week to predict marathon race time? And another example regression prediction question is: can we use house size (livable square feet) to predict house sale price? We will use regression to explore this question in the rest of this chapter, using a real estate data set from Sacremento, California that is available in the `caret` package. *Note: in addition to prediction, regression can also be used to model the relationship between two or more variables, but here we will focus only on prediction.*
+
 
 ## Sacremento real estate example
 
@@ -51,7 +52,9 @@ From looking at the visualization above, we see that as house size (square foota
 
 ## K-nearest neighbours regression
 
-Let's take a small sample of the data above and walk through how K-nearest neighbours (knn) regression works before we dive in to creating our model and assessing how well it predicts house price. To take a small random sample of size 30 , we'll use the function `sample_n`. This function takes two arguments:
+Let's take a small sample of the data above and walk through how K-nearest neighbours (knn) regression works before we dive in to creating our model and assessing how well it predicts house price. This subsample is taken only to be able to illustrate the mechanics of k-nn regression with a few data points, later in this chapter we will use all the data.
+
+To take a small random sample of size 30 , we'll use the function `sample_n`. This function takes two arguments:
 
 1. `tbl` (a data frame-like object to sample from)
 2. `size` (the number of observations/rows to be randomly selected/sampled)
@@ -218,7 +221,7 @@ k450 <- get_predictions(450, X_train, Y_train)
 grid.arrange(k1, k10, k25, k51, k250, k450, ncol = 2)
 ```
 
-From the plots above, we see that when $k$ = 1, the blue line runs perfectly through almost all of our training observations. This happens because our predicted values for a given region, depend on just a single observation. A model like this has high variance and low bias. It has high variance because the flexible blue line follows the training observations very closely, and if we were to change any one of the training observation data points we would change the flexible blue line quite a lot. This means that the blue line matches the data we happen to have in this training data set, however, if we were to collect another training data set from the Sacramento real estate market it likely wouldn't match those observations as well. However, it has low bias because the model/predicted values matches the actual observed values in this training data set very well. Another term that we use to collectively describe this kind of model is overfitting.
+From the plots above, we see that when $k$ = 1, the blue line runs perfectly through almost all of our training observations. This happens because our predicted values for a given region, depend on just a single observation. A model like this has high variance and low bias. It has high variance because the flexible blue line follows the training observations very closely, and if we were to change any one of the training observation data points we would change the flexible blue line quite a lot. This means that the blue line matches the data we happen to have in this training data set, however, if we were to collect another training data set from the Sacramento real estate market it likely wouldn't match those observations as well. However, it has low bias because the model/predicted values matches the actual observed values in this training data set very well. Another term that we use to collectively describe this phenomenon is overfitting.
 
 What about the plot where $k$ is quite large, say $k$ = 450, for example? When $k$ = 450 for this data set, the blue line is extremely smooth, and almost flat. This happens because our predicted values for a given x value (here home size), depend on many many neighbouring observations, 450 to be exact! A model like this has low variance and high bias. It has low variance because the smooth, inflexible blue line does not follow the training observations very closely, and if we were to change any one of the training observation data points it really wouldn't affect the shape of the smooth blue line at all. This means that although the blue line matches does not match the data we happen to have in this particular training data set perfectly, if we were to collect another training data set from the Sacramento real estate market it likely would match those observations equally as well as it matches those in this training data set. This model also has high bias because the model/predicted values does not match the actual observed values very well. Another term that we use to collectively describe this kind of model is underfitting. 
 
@@ -278,5 +281,5 @@ As with k-nn classification (or any prediction algorithm for that manner), k-nn 
 ### Limitations of k-nn regression
 
 1. As data gets bigger and bigger, k-nn gets slower and slower, quite quickly
-2. Does not perform well with a large number of predictors
+2. Does not perform well with a large number of predictors unless the size of the training set is exponentially larger 
 3. Does not predict well beyond the range of values input in your training data
