added reading for mult-var regression in the prediction context.

--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -202,4 +202,5 @@ How do these two models compare on this data set? On the visualizations above we
 
 ## Additional readings/resources
 - Pages 59-71 of [Introduction to Statistical Learning](http://www-bcf.usc.edu/~gareth/ISL/ISLR%20Seventh%20Printing.pdf) with Applications in R by Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani
+- Pages 104 - 109 of [An Introduction to Statistical Learning with Applications in R](https://www-bcf.usc.edu/~gareth/ISL/ISLR%20Seventh%20Printing.pdf) by Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani
 - [The `caret` Package](https://topepo.github.io/caret/index.html)
