--- a/09-regression3.Rmd
+++ b/09-regression3.Rmd
@@ -246,9 +246,9 @@ plot_ly() %>%
         z = ~ as.integer(price), 
         y = ~ as.numeric(baths),
         marker = list(size = 5, opacity = 0.4, color = "red")) %>% 
-  layout(scene = list(xaxis = list(title = 'Scaled house size (square feet)'), 
+  layout(scene = list(xaxis = list(title = 'House size (square feet)'), 
                      zaxis = list(title = 'Price (USD)'),
-                     yaxis = list(title = 'Scaled number of bathrooms'))) %>% 
+                     yaxis = list(title = 'Number of bathrooms'))) %>% 
   add_surface(x = ~ lm_x_grid, 
               y = ~ lm_y_grid, 
               z = ~ lm_z_grid,
